--- a/kms.html
+++ b/kms.html
@@ -3,152 +3,390 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Kilómetros · Gastos 2N</title>
+  <title>Gastos 2N · KM</title>
+
   <link rel="stylesheet" href="assets/style.css">
 
+  <!-- Firebase compat -->
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/11.6.1/firebase-storage-compat.js"></script>
+
+  <!-- Config Firebase -->
   <script src="config.js"></script>
 </head>
 <body>
+
 <header class="topbar">
   <h1>
-    <img src="assets/2n-logo-black.png" style="height:20px;border-radius:4px;">
-    Kilómetros
+    <img src="assets/2n-logo-black.png" alt="2N" style="height:20px;border-radius:4px;">
+    Gastos 2N · KM
   </h1>
+
   <a class="badge" href="index.html">🏠 Inicio</a>
+  <a class="badge active" href="kms.html">🚗 KM</a>
+  <a class="badge" href="export.html">📤 Export</a>
   <a class="badge" href="summary.html">📄 Summary</a>
+
+  <div class="header-actions">
+    <span id="whoami" class="badge">No autenticado</span>
+    <button id="btnLogin" class="btn">Iniciar sesión</button>
+    <button id="btnLogout" class="btn danger" style="display:none">Salir</button>
+  </div>
 </header>
 
 <main class="content">
   <div class="grid">
+
+    <!-- FORMULARIO KM -->
     <div class="card">
-      <h2>Registrar KM</h2>
-      <div class="row">
+      <h2>Nuevo registro de KM</h2>
+
+      <div class="row" style="flex-wrap:wrap;gap:10px">
         <div>
           <label>Fecha</label><br>
           <input id="kmDate" type="date">
         </div>
         <div>
-          <label>KM inicial</label><br>
-          <input id="kmStart" type="number">
+          <label>KM recorridos</label><br>
+          <input id="kmDistance" type="number" step="0.1" style="width:120px">
         </div>
         <div>
-          <label>KM final</label><br>
-          <input id="kmEnd" type="number">
+          <label>Tipo</label><br>
+          <select id="kmType">
+            <option value="empresa" selected>Empresa</option>
+            <option value="personal">Personal</option>
+          </select>
         </div>
       </div>
-      <div class="row">
-        <label>Motivo</label>
-        <input id="kmReason" type="text" style="min-width:200px">
+
+      <div class="row" style="flex-wrap:wrap;gap:10px;margin-top:10px">
+        <div>
+          <label>Precio combustible (€/L)</label><br>
+          <input id="kmFuelPrice" type="number" step="0.01" style="width:140px">
+        </div>
+        <div>
+          <label>KM totales coche</label><br>
+          <input id="kmOdometer" type="number" step="1" style="width:140px">
+        </div>
       </div>
-      <button id="btnSaveKM" class="btn primary">Guardar KM</button>
+
+      <div style="margin-top:10px">
+        <label>Notas</label><br>
+        <textarea id="kmNotes" rows="3" style="width:100%" placeholder="Trayecto, motivo, cliente, etc."></textarea>
+      </div>
+
+      <div class="row" style="margin-top:12px;gap:8px;flex-wrap:wrap">
+        <button id="btnSaveKm" class="btn primary">Guardar KM</button>
+        <button id="btnClearKm" class="btn">Limpiar formulario</button>
+        <span id="kmStatus" class="small" style="min-height:1.5em"></span>
+      </div>
     </div>
 
+    <!-- LISTA KM -->
     <div class="card">
-      <h2>Total acumulado</h2>
-      <!-- Solo lectura, no se puede escribir -->
-      <div id="kmTotal" class="kpi" style="font-size:22px;text-align:center">0 km</div>
+      <h2>Últimos registros</h2>
+      <div id="kmList" class="list small" style="max-height:260px;overflow:auto;"></div>
+      <div class="small" style="margin-top:6px">
+        Se muestran los últimos 20 registros de KM.
+      </div>
     </div>
 
+    <!-- RESUMEN -->
     <div class="card">
-      <h2>Últimos movimientos</h2>
-      <table id="tablaKM">
-        <thead>
-          <tr>
-            <th>Fecha</th>
-            <th>Inicio</th>
-            <th>Fin</th>
-            <th>Recorrido</th>
-            <th>Motivo</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
+      <h2>Resumen rápido</h2>
+      <div id="kmTotals" class="small"></div>
     </div>
+
   </div>
 </main>
 
+<!-- FIREBASE + AUTH -->
 <script>
 (function(){
-  if (!firebase.apps.length) firebase.initializeApp(window.__FBCONFIG__);
-  const auth = firebase.auth();
-  const db   = firebase.firestore();
-
-  document.getElementById('kmDate').value = new Date().toISOString().slice(0,10);
-
-  async function saveKM(){
-    const u = auth.currentUser;
-    if (!u){
-      alert('Debes iniciar sesión.');
-      return;
+  try{
+    if (!firebase.apps.length) {
+      firebase.initializeApp(window.__FBCONFIG__);
     }
 
-    const date   = document.getElementById('kmDate').value;
-    const start  = Number(document.getElementById('kmStart').value || 0);
-    const end    = Number(document.getElementById('kmEnd').value   || 0);
-    const reason = document.getElementById('kmReason').value;
+    var auth = firebase.auth();
 
-    if (end < start){
-      alert('El KM final no puede ser menor que el inicial.');
-      return;
+    if (firebase.auth.Auth.Persistence) {
+      auth.setPersistence(firebase.auth.Auth.Persistence.LOCAL).catch(function(){});
+    }
+    if (auth.getRedirectResult) {
+      auth.getRedirectResult().catch(function(){});
     }
 
-    try{
-      await db.collection('users/'+u.uid+'/kms').add({
-        date     : new Date(date),
-        startKM  : start,
-        endKM    : end,
-        distance : end - start,
-        reason   : reason,
-        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+    function updateUser(u){
+      var who = document.getElementById('whoami');
+      var bL  = document.getElementById('btnLogin');
+      var bO  = document.getElementById('btnLogout');
+
+      if (u){
+        if (who) who.textContent = 'Conectado: ' + (u.email || u.uid);
+        if (bL)  bL.style.display = 'none';
+        if (bO)  bO.style.display = '';
+      } else {
+        if (who) who.textContent = 'No autenticado';
+        if (bL)  bL.style.display = '';
+        if (bO)  bO.style.display = 'none';
+      }
+
+      try{
+        document.dispatchEvent(new CustomEvent('auth-changed',{ detail:{ user:u } }));
+      }catch(e){}
+    }
+
+    auth.onAuthStateChanged(updateUser);
+
+    window.__APPCTX__ = {
+      auth   : auth,
+      db     : firebase.firestore(),
+      storage: firebase.storage()
+    };
+
+    var prov   = new firebase.auth.GoogleAuthProvider();
+    var btnIn  = document.getElementById('btnLogin');
+    var btnOut = document.getElementById('btnLogout');
+
+    if (btnIn){
+      btnIn.addEventListener('click', function(){
+        auth.signInWithPopup(prov).catch(function(err){
+          if (err && (err.code === 'auth/popup-blocked' || err.code === 'auth/popup-closed-by-user')){
+            auth.signInWithRedirect(prov);
+          } else {
+            alert('Error login: ' + (err && err.message || ''));
+          }
+        });
       });
-      alert('KM guardados ✔️');
-      loadData();
-    }catch(e){
-      alert('Error guardando KM: '+e.message);
     }
+
+    if (btnOut){
+      btnOut.addEventListener('click', function(){
+        auth.signOut();
+      });
+    }
+  }catch(e){
+    console.error(e);
+  }
+})();
+</script>
+
+<!-- LÓGICA KM -->
+<script>
+(function(){
+  function $(id){ return document.getElementById(id); }
+
+  // Inicializar fecha por defecto a hoy
+  (function initForm(){
+    var hoy = new Date().toISOString().slice(0,10);
+    var f = $('kmDate');
+    if (f && !f.value) f.value = hoy;
+  })();
+
+  function setKmStatus(msg){
+    var el = $('kmStatus');
+    if (!el) return;
+    el.textContent = msg || '';
   }
 
-  document.getElementById('btnSaveKM').onclick = saveKM;
+  /* ====== LEER KM (Firebase o local) ====== */
+  async function loadKmEntries(){
+    var ctx  = window.__APPCTX__ || {};
+    var auth = ctx.auth;
+    var db   = ctx.db;
+    var user = auth && auth.currentUser;
+    var result = [];
 
-  async function loadData(){
-    const u = auth.currentUser;
-    if (!u) return;
+    if (user && db){
+      var snap = await db.collection('users/'+user.uid+'/kms')
+                         .orderBy('date','desc')
+                         .limit(20)
+                         .get();
+      snap.forEach(function(doc){
+        var o = doc.data();
+        var d = o.date && o.date.toDate ? o.date.toDate() : new Date(o.date);
+        o._date = d;
+        result.push(o);
+      });
+    } else {
+      var arr = JSON.parse(localStorage.getItem('kms_local') || '[]');
+      // último 20, orden inverso
+      result = arr.slice(-20).reverse().map(function(o){
+        o._date = new Date(o.date);
+        return o;
+      });
+    }
 
-    const tbody = document.querySelector('#tablaKM tbody');
-    tbody.innerHTML = '';
+    return result;
+  }
 
-    const snap = await db.collection('users/'+u.uid+'/kms')
-      .orderBy('date','desc')
-      .limit(20)
-      .get();
+  /* ====== PINTAR LISTA KM ====== */
+  function renderKmList(list){
+    var cont = $('kmList');
+    if (!cont) return;
+    cont.innerHTML = '';
 
-    let totalKM = 0;
+    if (!list.length){
+      cont.innerHTML = '<div class="small">Sin registros de KM todavía.</div>';
+      return;
+    }
 
-    snap.forEach(doc=>{
-      const e = doc.data();
-      const d = e.date.toDate().toISOString().slice(0,10);
-      totalKM += Number(e.distance || 0);
+    list.forEach(function(e){
+      var div = document.createElement('div');
+      div.className = 'small';
+      var d = e._date instanceof Date ? e._date : new Date(e._date || e.date);
+      var fecha = d.toISOString().slice(0,10);
 
-      const tr = document.createElement('tr');
-      tr.innerHTML =
-        '<td>'+d+'</td>'+
-        '<td>'+e.startKM+'</td>'+
-        '<td>'+e.endKM+'</td>'+
-        '<td>'+e.distance+'</td>'+
-        '<td>'+(e.reason||'')+'</td>';
+      var tipo = (e.type || '').toLowerCase().includes('per')
+        ? 'Personal'
+        : 'Empresa';
 
-      tbody.appendChild(tr);
+      var linea =
+        fecha + ' · ' +
+        (Number(e.km || e.distance || 0).toFixed(1) + ' km') + ' · ' +
+        tipo;
+
+      if (e.totalKm != null && e.totalKm !== ''){
+        linea += ' · Odómetro: ' + e.totalKm;
+      }
+
+      if (e.fuelPrice != null && e.fuelPrice !== ''){
+        linea += ' · Comb.: ' + Number(e.fuelPrice).toFixed(2) + ' €/L';
+      }
+
+      div.textContent = linea;
+      cont.appendChild(div);
+    });
+  }
+
+  /* ====== RESUMEN KM ====== */
+  function renderKmTotals(list){
+    var cont = $('kmTotals');
+    if (!cont) return;
+
+    if (!list.length){
+      cont.innerHTML = '<div class="small">Sin datos para resumir.</div>';
+      return;
+    }
+
+    var total = 0;
+    var emp   = 0;
+    var per   = 0;
+
+    list.forEach(function(e){
+      var km = Number(e.km || e.distance || 0) || 0;
+      total += km;
+      if ((e.type || '').toLowerCase().includes('per')) per += km;
+      else emp += km;
     });
 
-    document.getElementById('kmTotal').textContent = totalKM + ' km';
+    cont.innerHTML =
+      '<b>KM totales (últimos 20 registros):</b> ' + total.toFixed(1) + ' km<br>' +
+      '<b>KM empresa:</b> ' + emp.toFixed(1) + ' km<br>' +
+      '<b>KM personales:</b> ' + per.toFixed(1) + ' km<br>' +
+      '<span class="small" style="display:block;margin-top:4px;">' +
+      'El desglose mensual completo lo verás en la página de Summary.' +
+      '</span>';
   }
 
-  auth.onAuthStateChanged(u=>{
-    if (u) loadData();
-  });
+  async function refreshKm(){
+    setKmStatus('Cargando registros…');
+    try{
+      var list = await loadKmEntries();
+      renderKmList(list);
+      renderKmTotals(list);
+      setKmStatus('');
+    }catch(e){
+      console.error(e);
+      setKmStatus('Error cargando registros de KM.');
+    }
+  }
+
+  /* ====== GUARDAR KM ====== */
+  async function saveKm(){
+    var ctx  = window.__APPCTX__ || {};
+    var auth = ctx.auth;
+    var db   = ctx.db;
+    var st   = ctx.storage; // no lo usamos, pero lo dejamos por coherencia
+
+    var user = auth && auth.currentUser;
+
+    var dateISO  = $('kmDate').value || new Date().toISOString().slice(0,10);
+    var distance = Number($('kmDistance').value || 0);
+    var type     = $('kmType').value;
+    var fuel     = $('kmFuelPrice').value;
+    var odom     = $('kmOdometer').value;
+    var notes    = $('kmNotes').value;
+
+    if (!distance || distance <= 0){
+      alert('Introduce los KM recorridos.');
+      return;
+    }
+
+    setKmStatus('Guardando…');
+
+    try{
+      if (user && db){
+        await db.collection('users/'+user.uid+'/kms').add({
+          date     : new Date(dateISO),
+          km       : distance,
+          type     : type,
+          fuelPrice: fuel !== '' ? Number(fuel) : null,
+          totalKm  : odom !== '' ? Number(odom) : null,
+          notes    : notes || '',
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+        });
+      } else {
+        var arr = JSON.parse(localStorage.getItem('kms_local') || '[]');
+        arr.push({
+          date    : dateISO,
+          km      : distance,
+          type    : type,
+          fuelPrice: fuel !== '' ? Number(fuel) : null,
+          totalKm : odom !== '' ? Number(odom) : null,
+          notes   : notes || ''
+        });
+        localStorage.setItem('kms_local', JSON.stringify(arr));
+      }
+
+      setKmStatus('KM guardado ✅');
+      // limpiar solo algunos campos
+      $('kmDistance').value = '';
+      $('kmNotes').value    = '';
+      // no vaciamos la fecha ni el odómetro por comodidad
+
+      document.dispatchEvent(new CustomEvent('kms-updated'));
+      refreshKm();
+    }catch(e){
+      console.error(e);
+      alert('Error guardando KM: ' + (e && e.message || ''));
+      setKmStatus('Error al guardar.');
+    }
+  }
+
+  function clearKmForm(){
+    var hoy = new Date().toISOString().slice(0,10);
+    if ($('kmDate'))      $('kmDate').value      = hoy;
+    if ($('kmDistance'))  $('kmDistance').value  = '';
+    if ($('kmFuelPrice')) $('kmFuelPrice').value = '';
+    if ($('kmOdometer'))  $('kmOdometer').value  = '';
+    if ($('kmNotes'))     $('kmNotes').value     = '';
+    if ($('kmType'))      $('kmType').value      = 'empresa';
+    setKmStatus('');
+  }
+
+  /* EVENTOS */
+  if ($('btnSaveKm'))  $('btnSaveKm').addEventListener('click', saveKm);
+  if ($('btnClearKm')) $('btnClearKm').addEventListener('click', clearKmForm);
+
+  document.addEventListener('auth-changed',  refreshKm, false);
+  document.addEventListener('kms-updated',   refreshKm, false);
+
+  // Primera carga
+  refreshKm();
 })();
 </script>
 
